# idopus

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: windows-release.yml
docs/: PORTING_ANALYSIS.md
include/core/: dir_buffer.h  dir_entry.h
include/pal/: pal_file.h  pal_ipc.h  pal_lists.h  pal_memory.h  pal_strings.h  pal_sync.h
packaging/windows/: idopus.iss
resources/: Info.plist.in  iDOpus.icns
resources/en.lproj/: Localizable.strings
resources/sv.lproj/: Localizable.strings
scripts/: fetch-rclone.sh  package.sh
src/core/: dir_buffer.c  dir_entry.c
src/gui/: AppDelegate.m
src/gui/qt/: Archiver.cpp  Archiver.h  BreadcrumbBar.cpp  BreadcrumbBar.h  ButtonBank.cpp  ButtonBank.h  ConflictDialog.cpp  ConflictDialog.h  DirBufferModel.cpp  DirBufferModel.h  FileJob.cpp  FileJob.h  FileTypeActions.cpp  FileTypeActions.h  JobsPanel.cpp  JobsPanel.h  ListerWidget.cpp  ListerWidget.h  MainWindow.cpp  MainWindow.h  PreferencesDialog.cpp  PreferencesDialog.h  PreviewPane.cpp  PreviewPane.h  main.cpp
src/pal/: pal_file.c  pal_file_win32.c  pal_ipc.c  pal_lists.c  pal_memory.c  pal_strings.c  pal_sync.c  pal_sync_win32.c
tests/: core_test.c  pal_test.c
